--- a/Vine_Review_Analysis.ipynb
+++ b/Vine_Review_Analysis.ipynb
@@ -1,59 +1,43 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Vine_Review_Analysis.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YWwR2xgHYrNI",
-        "outputId": "3b4f9dac-dbc4-4f5c-ff7f-3693cba07a42"
+        "outputId": "ce8cb29d-6c52-4ed2-f086-cd31eb541575"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "\r0% [Working]\r            \rGet:1 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
-            "\r0% [Waiting for headers] [1 InRelease 14.2 kB/88.7 kB 16%] [Connected to cloud.\r                                                                               \rHit:2 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
-            "\r0% [Waiting for headers] [1 InRelease 66.3 kB/88.7 kB 75%] [Connected to cloud.\r                                                                               \rGet:3 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
-            "Get:4 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease [1,581 B]\n",
-            "Get:5 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease [3,626 B]\n",
-            "Get:6 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]\n",
+            "\r0% [Working]\r            \rHit:1 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
+            "\r0% [Waiting for headers] [Connecting to security.ubuntu.com (185.125.190.39)] [\r                                                                               \rGet:2 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
+            "\r                                                                               \rGet:3 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease [3,626 B]\n",
+            "\r0% [2 InRelease 15.6 kB/88.7 kB 18%] [Connecting to security.ubuntu.com (185.12\r0% [1 InRelease gpgv 242 kB] [2 InRelease 15.6 kB/88.7 kB 18%] [Connecting to s\r                                                                               \rGet:4 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease [1,581 B]\n",
+            "Get:5 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]\n",
+            "Get:6 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
             "Get:7 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease [15.9 kB]\n",
             "Ign:8 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
             "Hit:9 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
             "Hit:10 http://ppa.launchpad.net/cran/libgit2/ubuntu bionic InRelease\n",
             "Hit:11 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic InRelease\n",
-            "Hit:12 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease\n",
-            "Get:13 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Packages [817 kB]\n",
-            "Get:14 http://security.ubuntu.com/ubuntu bionic-security/universe amd64 Packages [1,527 kB]\n",
-            "Get:15 http://security.ubuntu.com/ubuntu bionic-security/main amd64 Packages [2,901 kB]\n",
-            "Get:16 http://security.ubuntu.com/ubuntu bionic-security/restricted amd64 Packages [1,063 kB]\n",
-            "Get:17 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ Packages [85.6 kB]\n",
-            "Get:18 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 Packages [3,333 kB]\n",
-            "Get:19 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 Packages [2,304 kB]\n",
-            "Get:20 http://archive.ubuntu.com/ubuntu bionic-updates/restricted amd64 Packages [1,105 kB]\n",
-            "Get:21 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main Sources [2,075 kB]\n",
-            "Get:23 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main amd64 Packages [1,063 kB]\n",
-            "Fetched 16.5 MB in 7s (2,246 kB/s)\n",
+            "Get:12 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ Packages [85.6 kB]\n",
+            "Hit:13 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease\n",
+            "Get:14 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Packages [817 kB]\n",
+            "Get:15 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 Packages [3,333 kB]\n",
+            "Get:16 http://archive.ubuntu.com/ubuntu bionic-updates/restricted amd64 Packages [1,105 kB]\n",
+            "Get:17 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 Packages [2,304 kB]\n",
+            "Get:18 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main Sources [2,075 kB]\n",
+            "Get:20 http://security.ubuntu.com/ubuntu bionic-security/main amd64 Packages [2,901 kB]\n",
+            "Get:21 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main amd64 Packages [1,063 kB]\n",
+            "Get:22 http://security.ubuntu.com/ubuntu bionic-security/universe amd64 Packages [1,527 kB]\n",
+            "Get:23 http://security.ubuntu.com/ubuntu bionic-security/restricted amd64 Packages [1,063 kB]\n",
+            "Fetched 16.5 MB in 8s (2,030 kB/s)\n",
             "Reading package lists... Done\n"
           ]
         }
@@ -85,38 +69,31 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "Gnt5FMdKYzLv"
+      },
+      "outputs": [],
       "source": [
         "# Start Spark session\n",
         "from pyspark.sql import SparkSession\n",
         "spark = SparkSession.builder.appName(\"VineAnalysis\").getOrCreate()"
-      ],
-      "metadata": {
-        "id": "Gnt5FMdKYzLv"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from pyspark import SparkFiles\n",
-        "url = \"https://s3.amazonaws.com/amazon-reviews-pds/tsv/amazon_reviews_us_Watches_v1_00.tsv.gz\"\n",
-        "spark.sparkContext.addFile(url)\n",
-        "df = spark.read.option(\"encoding\", \"UTF-8\").csv(SparkFiles.get(\"\"), sep=\"\\t\", header=True, inferSchema=True)\n",
-        "df.show()"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "WY5oPsNvZFRb",
-        "outputId": "e63c0659-d64e-4dfc-c5a4-03e26107041b"
+        "outputId": "4bba6077-6704-46e9-e371-f0c16a0e76b5"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+-----------+-----------+--------------+----------+--------------+--------------------+----------------+-----------+-------------+-----------+----+-----------------+--------------------+--------------------+-----------+\n",
             "|marketplace|customer_id|     review_id|product_id|product_parent|       product_title|product_category|star_rating|helpful_votes|total_votes|vine|verified_purchase|     review_headline|         review_body|review_date|\n",
@@ -146,39 +123,40 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "from pyspark import SparkFiles\n",
+        "url = \"https://s3.amazonaws.com/amazon-reviews-pds/tsv/amazon_reviews_us_Watches_v1_00.tsv.gz\"\n",
+        "spark.sparkContext.addFile(url)\n",
+        "df = spark.read.option(\"encoding\", \"UTF-8\").csv(SparkFiles.get(\"\"), sep=\"\\t\", header=True, inferSchema=True)\n",
+        "df.show()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from pyspark.sql.functions import to_date,count,col\n"
-      ],
+      "execution_count": 5,
       "metadata": {
         "id": "VB4d1KisZTOP"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from pyspark.sql.functions import to_date,count,col\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Create the vine_table. DataFrame\n",
-        "vine_df = df.select([\"review_id\", \"star_rating\", \"helpful_votes\", \"total_votes\", \"vine\", \"verified_purchase\"])\n",
-        "\n",
-        "vine_df.show()"
-      ],
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tG064D4kZUOG",
-        "outputId": "ad12a4d0-89a8-43bd-ac15-2e2a17f06925"
+        "outputId": "ba21681e-b256-4273-f217-e400833a3be9"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+--------------+-----------+-------------+-----------+----+-----------------+\n",
             "|     review_id|star_rating|helpful_votes|total_votes|vine|verified_purchase|\n",
@@ -208,29 +186,28 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "# Create the vine_table. DataFrame\n",
+        "vine_df = df.select([\"review_id\", \"star_rating\", \"helpful_votes\", \"total_votes\", \"vine\", \"verified_purchase\"])\n",
+        "\n",
+        "vine_df.show()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 1. All rows where total votes >= 20 to see reviews which are more likely to be helpful \n",
-        "\n",
-        "vine_over_20 = vine_df.filter(vine_df.total_votes >= 20)\n",
-        "\n",
-        "vine_over_20.show() "
-      ],
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uKP5VlpIZrbt",
-        "outputId": "aba84cf0-ef74-474d-9d74-fb94ab5b6ac2"
+        "outputId": "f2075f46-b684-4ce6-82b9-72b876dea0fa"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+--------------+-----------+-------------+-----------+----+-----------------+\n",
             "|     review_id|star_rating|helpful_votes|total_votes|vine|verified_purchase|\n",
@@ -260,29 +237,29 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "# 1. All rows where total votes >= 20 to see reviews which are more likely to be helpful \n",
+        "\n",
+        "vine_over_20 = vine_df.filter(vine_df.total_votes >= 20)\n",
+        "\n",
+        "vine_over_20.show() "
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# helpful votes divided by total votes is >= than 50%\n",
-        "\n",
-        "helpfulvotes_over_50 = vine_over_20.filter(vine_over_20.helpful_votes / vine_over_20.total_votes >= .50)\n",
-        "\n",
-        "helpfulvotes_over_50.show(20)"
-      ],
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4zVLaVcce6Je",
-        "outputId": "dcca6cde-d1be-4455-95ba-4778a271a0eb"
+        "outputId": "06b3f58f-0303-4f6a-ca07-6b6a3df8de83"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+--------------+-----------+-------------+-----------+----+-----------------+\n",
             "|     review_id|star_rating|helpful_votes|total_votes|vine|verified_purchase|\n",
@@ -312,29 +289,29 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "# helpful votes divided by total votes is >= than 50%\n",
+        "\n",
+        "helpfulvotes_over_50 = vine_over_20.filter(vine_over_20.helpful_votes / vine_over_20.total_votes >= .50)\n",
+        "\n",
+        "helpfulvotes_over_50.show(20)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# All rows where a review was a vine review ie. paid (vine = Y)\n",
-        "\n",
-        "vine_reviews = helpfulvotes_over_50.filter(helpfulvotes_over_50.vine == \"Y\")\n",
-        "\n",
-        "vine_reviews.show(20)"
-      ],
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "54wc2bwHgLPJ",
-        "outputId": "295bd628-1e41-4f82-c09b-5b9c26ac8b84"
+        "outputId": "855c4115-f8e9-4435-b6f5-f182b89f55a9"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+--------------+-----------+-------------+-----------+----+-----------------+\n",
             "|     review_id|star_rating|helpful_votes|total_votes|vine|verified_purchase|\n",
@@ -364,29 +341,29 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "# All rows where a review was a vine review ie. paid (vine = Y)\n",
+        "\n",
+        "vine_reviews = helpfulvotes_over_50.filter(helpfulvotes_over_50.vine == \"Y\")\n",
+        "\n",
+        "vine_reviews.show(20)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# All rows where a review was NOT a vine review ie. unpaid (vine = N)\n",
-        "\n",
-        "not_vine_reviews = helpfulvotes_over_50.filter(helpfulvotes_over_50.vine == \"N\")\n",
-        "\n",
-        "not_vine_reviews.show(20)"
-      ],
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JXRVDSwMhc8D",
-        "outputId": "e03e55ac-3ab7-4931-bcff-036c430e4088"
+        "outputId": "e5c85d6e-186d-4362-8798-4350f9422b67"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+--------------+-----------+-------------+-----------+----+-----------------+\n",
             "|     review_id|star_rating|helpful_votes|total_votes|vine|verified_purchase|\n",
@@ -416,75 +393,98 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "# All rows where a review was NOT a vine review ie. unpaid (vine = N)\n",
+        "\n",
+        "not_vine_reviews = helpfulvotes_over_50.filter(helpfulvotes_over_50.vine == \"N\")\n",
+        "\n",
+        "not_vine_reviews.show(20)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Total reviews, 5 star reviews, percentage 5 star reviews for paid (vine reviews)\n",
-        "\n",
-        "total_vine_reviews = vine_reviews.count() \n",
-        "print(total_vine_reviews)\n",
-        "\n",
-        "fivestar_vine_reviews = vine_reviews.filter(vine_reviews.star_rating == \"5\").count()\n",
-        "print(fivestar_vine_reviews) \n",
-        "\n",
-        "perc_fivestar_vine = fivestar_vine_reviews / total_vine_reviews * 100\n",
-        "print(round(perc_fivestar_vine, 2))"
-      ],
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gfeq2Yv-h_3G",
-        "outputId": "6e8a9299-ae9e-4f11-a261-edeab780cd95"
+        "outputId": "c813a0cc-3bb7-4751-dc1c-709f861fedca"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "47\n",
-            "15\n",
-            "31.91\n"
+            "The total # of vine reviews is  47\n",
+            "The total # of 5 star vine reviews is  15\n",
+            "The percentage of 5 star vine reviews is  31.91\n"
           ]
         }
+      ],
+      "source": [
+        "# Total reviews, 5 star reviews, percentage 5 star reviews for paid (vine reviews)\n",
+        "\n",
+        "total_vine_reviews = vine_reviews.count() \n",
+        "print(\"The total # of vine reviews is \", total_vine_reviews)\n",
+        "\n",
+        "fivestar_vine_reviews = vine_reviews.filter(vine_reviews.star_rating == \"5\").count()\n",
+        "print(\"The total # of 5 star vine reviews is \", fivestar_vine_reviews) \n",
+        "\n",
+        "perc_fivestar_vine = fivestar_vine_reviews / total_vine_reviews * 100\n",
+        "print(\"The percentage of 5 star vine reviews is \", round(perc_fivestar_vine, 2))"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Total reviews, 5 star reviews, percentage 5 star reviews for unpaid (not vine reviews)\n",
-        "\n",
-        "total_not_vine_reviews = not_vine_reviews.count()\n",
-        "print(total_not_vine_reviews)\n",
-        "\n",
-        "fivestar_not_vine_reviews = not_vine_reviews.filter(not_vine_reviews.star_rating == \"5\").count()\n",
-        "print(fivestar_not_vine_reviews) \n",
-        "\n",
-        "perc_fivestar_not_vine = fivestar_not_vine_reviews / total_not_vine_reviews * 100\n",
-        "print(round(perc_fivestar_not_vine, 2))"
-      ],
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0etWjYHViyQs",
-        "outputId": "e677c34c-36d7-47a9-8f46-e1d70382ef35"
+        "outputId": "a9caaa57-86b4-42a5-d7d4-ff9f4a6f905a"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "8362\n",
-            "4332\n",
-            "51.81\n"
+            "The total # of not-vine reviews is  8362\n",
+            "The total # of 5 star not-vine reviews is  4332\n",
+            "The percentage of 5 star not-vine reviews is  51.81\n"
           ]
         }
+      ],
+      "source": [
+        "# Total reviews, 5 star reviews, percentage 5 star reviews for unpaid (not vine reviews)\n",
+        "\n",
+        "total_not_vine_reviews = not_vine_reviews.count()\n",
+        "print(\"The total # of not-vine reviews is \", total_not_vine_reviews)\n",
+        "\n",
+        "fivestar_not_vine_reviews = not_vine_reviews.filter(not_vine_reviews.star_rating == \"5\").count()\n",
+        "print(\"The total # of 5 star not-vine reviews is \", fivestar_not_vine_reviews) \n",
+        "\n",
+        "perc_fivestar_not_vine = fivestar_not_vine_reviews / total_not_vine_reviews * 100\n",
+        "print(\"The percentage of 5 star not-vine reviews is \", round(perc_fivestar_not_vine, 2))"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "Vine_Review_Analysis.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
